[package]
name = "Reporte"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }
ink_env = { version = "4.3.0", default-features = false }
TrabajoFinal = { path = "trabajo_final", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e =  { version = "4.3.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "TrabajoFinal/std"
]
ink-as-dependency = []
e2e-tests = []
